--- a/app/src/main/res/drawable-v24/background_color.xml
+++ b/app/src/main/res/drawable-v24/background_color.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape
     android:shape="rectangle"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    >
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:startColor="#D9DCF0"
         android:endColor="#112857"
@@ -10,4 +9,5 @@
     <stroke
         android:width="2dp"
         android:color="#ffffff"/>
+    <corners android:radius="10dp"/>
 </shape>
