Third Commit - Completed functionality for Niche Tasks

--- a/app/src/main/res/layout/niche_tasks_add.xml
+++ b/app/src/main/res/layout/niche_tasks_add.xml
@@ -32,7 +32,7 @@
         android:layout_gravity="center_horizontal"
         android:background="@drawable/background_color"
         android:text="CHOOSE TIME"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textStyle="bold"
         android:textColor="#ffffff"
         android:padding="15dp"
@@ -47,7 +47,7 @@
         android:layout_gravity="center_horizontal"
         android:background="@drawable/background_color"
         android:text="CHOOSE DATE"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textStyle="bold"
         android:textColor="#ffffff"
         android:padding="15dp"
