--- a/app/src/main/res/layout/list_view.xml
+++ b/app/src/main/res/layout/list_view.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/list_view"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/heading"
@@ -22,7 +21,7 @@
         android:layout_below="@+id/heading"/>
     <TextView
         android:id="@+id/noItemText"
-        android:layout_width="320dp"
+        android:layout_width="match_parent"
         android:layout_height="100dp"
         android:text=""
         android:layout_marginTop="300dp"
