--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#B4D3E7</color>
+    <color name="colorPrimary">#9fb6e4</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#9BBEDA</color>
 </resources>
