--- a/app/src/main/res/layout/list_view.xml
+++ b/app/src/main/res/layout/list_view.xml
@@ -11,6 +11,7 @@
         android:layout_marginBottom="20dp"
         android:layout_marginTop="20dp"
         android:textSize="40sp"
+        android:textStyle="bold"
         android:textColor="@color/colorPrimary"
         android:gravity="center"
         android:layout_centerHorizontal="true"/>
