--- a/app/src/main/res/layout/points_tally.xml
+++ b/app/src/main/res/layout/points_tally.xml
@@ -1,27 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"     android:orientation="vertical"
     android:id="@+id/pointsTallyView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_centerVertical="true">
-
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/member1Card">
-        <include layout="@layout/points_tally_card"/>
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/member2Card">
-        <include layout="@layout/points_tally_card"/>
-    </RelativeLayout>
-    <include layout="@layout/points_tally_card"
-        android:id="@+id/member3Card"/>
-    <include layout="@layout/points_tally_card"
-        android:id="@+id/member4Card"/>
-
+    android:layout_centerVertical="true"
+    android:layout_centerInParent="true"
+    android:gravity="center">
 </LinearLayout>
