--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="@drawable/background_color"
+        android:background="@drawable/theme_button"
         android:clickable="true">
 
         <TextView
@@ -29,7 +29,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="@drawable/background_color_opp"
+        android:background="@drawable/theme_button_opp"
         android:clickable="true">
 
         <TextView
