--- a/app/src/main/res/layout/list_view.xml
+++ b/app/src/main/res/layout/list_view.xml
@@ -32,7 +32,7 @@
         android:textAlignment="center"/>
     <Button
         android:id="@+id/addMB"
-        android:background="@drawable/background_color"
+        android:background="@drawable/theme_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
