--- a/app/src/main/res/layout/niche_tasks.xml
+++ b/app/src/main/res/layout/niche_tasks.xml
@@ -28,7 +28,7 @@
             android:textColor="#ffffff"
             android:textSize="20sp"
             android:layout_below="@id/text"
-            android:background="@drawable/background_color_opp" />
+            android:background="@drawable/theme_button_opp" />
 
         <Button
             android:id="@+id/task2"
@@ -40,7 +40,7 @@
             android:textSize="20sp"
             android:layout_below="@+id/text"
             android:layout_toRightOf="@+id/task1"
-            android:background="@drawable/background_color" />
+            android:background="@drawable/theme_button" />
 
         <Button
             android:id="@+id/task3"
@@ -51,7 +51,7 @@
             android:textColor="#ffffff"
             android:textSize="20sp"
             android:layout_below="@+id/task1"
-            android:background="@drawable/background_color_opp" />
+            android:background="@drawable/theme_button_opp" />
 
         <Button
             android:id="@+id/task4"
@@ -63,7 +63,7 @@
             android:textSize="20sp"
             android:layout_below="@+id/task2"
             android:layout_toRightOf="@+id/task3"
-            android:background="@drawable/background_color" />
+            android:background="@drawable/theme_button" />
 
         <Button
             android:id="@+id/pointsTally"
@@ -74,7 +74,7 @@
             android:text="POINTS TALLY!"
             android:textSize="25sp"
             android:textColor="#090808"
-            android:background="@drawable/background_color"
+            android:background="@drawable/theme_button"
             android:backgroundTint="#F7C47E"
             android:elevation="20dp"/>
 
