--- a/app/src/main/res/layout/niche_tasks_add.xml
+++ b/app/src/main/res/layout/niche_tasks_add.xml
@@ -32,7 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:background="@drawable/background_color"
+        android:background="@drawable/theme_button"
         android:text="CHOOSE TIME"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -47,7 +47,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:background="@drawable/background_color"
+        android:background="@drawable/theme_button"
         android:text="CHOOSE DATE"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -95,7 +95,7 @@
             android:text="Cancel"
             android:textStyle="bold"
             android:textColor="#ffffff"
-            android:background="@drawable/background_color"/>
+            android:background="@drawable/danger_button"/>
         <Button
             android:id="@+id/taskSave"
             android:layout_width="wrap_content"
@@ -107,7 +107,7 @@
             android:text="Save &amp; Share"
             android:textStyle="bold"
             android:textColor="#ffffff"
-            android:background="@drawable/background_color" />
+            android:background="@drawable/theme_button" />
     </RelativeLayout>
 </LinearLayout>
 </ScrollView>
