--- a/app/src/main/res/layout/points_tally.xml
+++ b/app/src/main/res/layout/points_tally.xml
@@ -6,4 +6,34 @@
     android:layout_centerVertical="true"
     android:layout_centerInParent="true"
     android:gravity="center">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_margin="40dp"
+        android:id="@+id/pointsTallyButtonView">
+        <Button
+            android:id="@+id/pointsTallyReset"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:padding="10dp"
+            android:text="Reset Tally"
+            android:textStyle="bold"
+            android:textColor="#ffffff"
+            android:background="@drawable/danger_button"/>
+        <Button
+            android:id="@+id/pointsTallyHome"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/pointsTallyReset"
+            android:layout_marginLeft="30dp"
+            android:layout_marginBottom="10dp"
+            android:padding="10dp"
+            android:text="Home"
+            android:textStyle="bold"
+            android:textColor="#ffffff"
+            android:background="@drawable/theme_button" />
+    </RelativeLayout>
 </LinearLayout>
