--- a/app/src/main/res/drawable-v24/theme_button.xml
+++ b/app/src/main/res/drawable-v24/theme_button.xml
@@ -3,11 +3,11 @@
     android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="#D9DCF0"
-        android:endColor="#112857"
+        android:startColor="@color/themeButtonLight"
+        android:endColor="@color/themeButtonDark"
         android:type="linear"/>
     <stroke
         android:width="2dp"
         android:color="#ffffff"/>
-    <corners android:radius="10dp"/>
+    <corners android:radius="30dp"/>
 </shape>
