--- a/app/src/main/res/drawable-v24/theme_button_opp.xml
+++ b/app/src/main/res/drawable-v24/theme_button_opp.xml
@@ -3,13 +3,13 @@
     android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="#D9DCF0"
-        android:endColor="#112D57"
+        android:startColor="@color/themeButtonLight"
+        android:endColor="@color/themeButtonDark"
         android:type="linear"
         android:angle="180"/>
     <stroke
         android:width="2dp"
         android:color="#ffffff"/>
-    <corners android:radius="10dp"/>
+    <corners android:radius="30dp"/>
 
 </shape>
