--- a/app/src/main/res/layout/points_tally.xml
+++ b/app/src/main/res/layout/points_tally.xml
@@ -1,11 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"     android:orientation="vertical"
-    android:id="@+id/pointsTallyView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_centerVertical="true"
     android:layout_centerInParent="true"
     android:gravity="center">
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1.5dp"
+        android:background="@color/colorPrimary"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/pointsTallyView"
+        android:orientation="vertical"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
