--- a/app/src/main/res/layout/spalsh.xml
+++ b/app/src/main/res/layout/spalsh.xml
@@ -1,6 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:gravity="center">
+
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:src="@drawable/my_mommy_icon"/>
+    <TextView
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:text="Starting up..."
+        android:textSize="20sp"
+        android:textColor="@color/colorPrimary"
+        android:textAlignment="center" />
 
 </LinearLayout>
