Sixth Commit - Profile finishes, registration bugs fixed, UI changes !RUNNING!

--- a/app/src/main/res/layout/registration_page.xml
+++ b/app/src/main/res/layout/registration_page.xml
@@ -33,6 +33,7 @@
             android:textSize="25sp"
             android:textColor= "@color/colorAccent"
             android:hint="Enter your family name..."
+            android:inputType="textCapSentences"
             android:imeOptions="actionDone"
             android:padding="15dp"
             android:layout_margin="20dp"/>
