--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#a1c4fd</color>
-    <color name="colorPrimaryDark">#78A8F7</color>
-    <color name="colorAccent">#a1c4fd</color>
+    <color name="colorPrimary">#7f5a83</color>
+    <color name="colorPrimaryDark">#0d324d</color>
+    <color name="colorAccent">#7f5a83</color>
 
-    <color name="themeButtonLight">#a1c4fd</color>
-    <color name="themeButtonDark">#c2e9fb</color>
+    <color name="themeButtonLight">#7f5a83</color>
+    <color name="themeButtonDark">#0d324d</color>
 
 </resources>
