Seventh Commit - Multiple changes in registration and profile

--- a/app/src/main/res/layout/points_tally.xml
+++ b/app/src/main/res/layout/points_tally.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"     android:orientation="vertical"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:background="#ffffff">
+
+<LinearLayout
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_centerVertical="true"
@@ -46,4 +53,18 @@
             android:textColor="#ffffff"
             android:background="@drawable/theme_button" />
     </RelativeLayout>
+
+    <Button
+        android:id="@+id/pointsTallyMMC"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:padding="10dp"
+        android:text="MyMommy League"
+        android:textSize="25sp"
+        android:textColor="#ffffff"
+        android:textStyle="bold"
+        android:background="@drawable/go_button"
+        android:elevation="20dp"/>
 </LinearLayout>
+</ScrollView>
