--- a/app/src/main/res/layout/niche_tasks_add.xml
+++ b/app/src/main/res/layout/niche_tasks_add.xml
@@ -107,7 +107,7 @@
             android:text="Save &amp; Share"
             android:textStyle="bold"
             android:textColor="#ffffff"
-            android:background="@drawable/theme_button" />
+            android:background="@drawable/go_button" />
     </RelativeLayout>
 </LinearLayout>
 </ScrollView>
