Eight Commit - Removed reminders, multiple MMC and UI changes !RUNNING CODE!

--- a/app/src/main/res/layout/points_tally.xml
+++ b/app/src/main/res/layout/points_tally.xml
@@ -1,17 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:layout_gravity="center"
     android:background="#ffffff">
 
 <LinearLayout
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_centerVertical="true"
-    android:layout_centerInParent="true"
+    android:layout_height="wrap_content"
     android:gravity="center">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Pagars' Billboard"
+        android:textSize="30sp"
+        android:textColor="@color/colorPrimary"
+        android:layout_margin="10dp"
+        android:padding="5dp" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:text="Member"
+            android:textSize="20sp"
+            android:textColor="@color/colorPrimary"
+            android:textStyle="bold"
+            android:padding="10dp"
+            android:layout_marginStart="30dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="Points"
+            android:textSize="20sp"
+            android:textColor="@color/colorPrimary"
+            android:textStyle="bold"
+            android:padding="10dp"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:text="Rating"
+            android:textSize="20sp"
+            android:textColor="@color/colorPrimary"
+            android:textStyle="bold"
+            android:padding="10dp"
+            android:layout_marginEnd="30dp"/>
+
+    </RelativeLayout>
 
     <View
         android:layout_width="match_parent"
@@ -24,11 +68,26 @@
         android:id="@+id/pointsTallyView"
         android:orientation="vertical"/>
 
+    <Button
+        android:id="@+id/pointsTallyMMC"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:layout_marginLeft="60dp"
+        android:layout_marginRight="60dp"
+        android:layout_marginTop="30dp"
+        android:text="MyMommy League"
+        android:textSize="25sp"
+        android:textColor="#ffffff"
+        android:textStyle="bold"
+        android:background="@drawable/go_button"
+        android:elevation="20dp"/>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:layout_margin="40dp"
+        android:layout_margin="30dp"
         android:id="@+id/pointsTallyButtonView">
         <Button
             android:id="@+id/pointsTallyReset"
@@ -41,30 +100,18 @@
             android:textColor="#ffffff"
             android:background="@drawable/danger_button"/>
         <Button
-            android:id="@+id/pointsTallyHome"
+            android:id="@+id/pointsTallyInsight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/pointsTallyReset"
             android:layout_marginLeft="30dp"
             android:layout_marginBottom="10dp"
             android:padding="10dp"
-            android:text="Home"
+            android:text="Insight"
             android:textStyle="bold"
             android:textColor="#ffffff"
-            android:background="@drawable/theme_button" />
+            android:background="@drawable/secondary_button" />
     </RelativeLayout>
 
-    <Button
-        android:id="@+id/pointsTallyMMC"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:padding="10dp"
-        android:text="MyMommy League"
-        android:textSize="25sp"
-        android:textColor="#ffffff"
-        android:textStyle="bold"
-        android:background="@drawable/go_button"
-        android:elevation="20dp"/>
 </LinearLayout>
 </ScrollView>
