--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,10 +66,11 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="REMINDERS"
+            android:text="BILLBOARD"
             android:textSize="40sp"
             android:textStyle="bold"
             android:textColor="#ffffff"
+            android:textAlignment="center"
             android:layout_centerInParent="true"/>
     </RelativeLayout>
 
