--- a/app/src/main/res/layout/niche_tasks.xml
+++ b/app/src/main/res/layout/niche_tasks.xml
@@ -13,6 +13,7 @@
             android:gravity="center"
             android:layout_centerHorizontal="true"
             android:padding="10dp"
+            android:layout_marginTop="20dp"
             android:layout_marginBottom="10dp"
             android:text="NICHE TASKS"
             android:textSize="50sp"
@@ -64,17 +65,21 @@
             android:layout_toRightOf="@+id/task3"
             android:background="@drawable/theme_button" />
 
-        <Button
-            android:id="@+id/pointsTally"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@id/task4">
+        <Button
+            android:id="@+id/nicheTasksReset"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_margin="30dp"
-            android:layout_below="@+id/task4"
-            android:text="POINTS TALLY!"
-            android:textSize="25sp"
+            android:padding="15dp"
+            android:text="RESET ALL"
+            android:textSize="20sp"
             android:textColor="#ffffff"
-            android:background="@drawable/secondary_button"
-            android:elevation="20dp"/>
-
+            android:background="@drawable/danger_button"
+            android:layout_centerInParent="true"/>
+        </RelativeLayout>
     </RelativeLayout>
 </ScrollView>
