--- a/app/src/main/res/layout/niche_tasks.xml
+++ b/app/src/main/res/layout/niche_tasks.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".NicheTasks">
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
         <TextView
             android:id="@+id/text"
             android:layout_width="wrap_content"
@@ -66,20 +72,47 @@
             android:background="@drawable/theme_button" />
 
         <RelativeLayout
+            android:id="@+id/buttonLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/task4">
-        <Button
-            android:id="@+id/nicheTasksReset"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="30dp"
-            android:padding="15dp"
-            android:text="RESET ALL"
-            android:textSize="20sp"
-            android:textColor="#ffffff"
-            android:background="@drawable/danger_button"
-            android:layout_centerInParent="true"/>
+            android:layout_below="@id/task4"
+            android:gravity="center_horizontal">
+                <Button
+                    android:id="@+id/nicheTasksReset"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="20dp"
+                    android:padding="15dp"
+                    android:text="RESET ALL"
+                    android:textColor="#ffffff"
+                    android:background="@drawable/danger_button"/>
+                <Button
+                    android:id="@+id/nicheTasksAdd"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toEndOf="@id/nicheTasksReset"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="20dp"
+                    android:layout_marginStart="30dp"
+                    android:padding="15dp"
+                    android:background="@drawable/go_button"
+                    android:text="ADD NICHE!"
+                    android:textColor="#ffffff" />
         </RelativeLayout>
-    </RelativeLayout>
-</ScrollView>
+                </RelativeLayout>
+        </ScrollView>
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottom_navigation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="0dp"
+            android:layout_marginEnd="0dp"
+            android:background="@color/white"
+            android:layout_alignParentBottom="true"
+            app:labelVisibilityMode="labeled"
+            app:itemTextColor="@drawable/selector"
+            app:itemIconTint="@drawable/selector"
+            app:menu="@menu/menu_navigation" />
+</RelativeLayout>
