--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -1,90 +1,110 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-<LinearLayout
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center_horizontal">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:orientation="vertical" android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_horizontal">
 
-    <RelativeLayout
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal">
+
+                <TextView
+                    android:id="@+id/profileFamilyName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textAlignment="center"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="40sp"
+                    android:layout_margin="30dp" />
+                <ImageView
+                    android:id="@+id/profileFamilyNameEdit"
+                    android:layout_width="65dp"
+                    android:layout_height="50dp"
+                    android:layout_toRightOf="@+id/profileFamilyName"
+                    android:background="@drawable/secondary_button"
+                    android:layout_marginTop="35dp"
+                    android:src="@drawable/edit"
+                    android:padding="8dp"/>
+
+            </RelativeLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="3dp"
+                android:background="@color/colorPrimary"
+                android:layout_margin="5dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Member Records"
+                android:textAlignment="center"
+                android:textColor="@color/colorPrimary"
+                android:textSize="30sp"
+                android:layout_margin="10dp" />
+
+            <LinearLayout
+                android:id="@+id/profileMembersView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:orientation="vertical"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="3dp"
+                android:background="@color/colorPrimary"
+                android:layout_margin="5dp" />
+
+            <Button
+                android:id="@+id/profileQuickStart"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="QuickStart Guide"
+                android:textSize="15sp"
+                android:textColor="#ffffff"
+                android:textStyle="bold"
+                android:padding="15dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/secondary_button"/>
+
+            <Button
+                android:id="@+id/profileLogout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Logout"
+                android:textSize="15sp"
+                android:textColor="#ffffff"
+                android:textStyle="bold"
+                android:padding="15dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="80dp"
+                android:background="@drawable/danger_button"/>
+
+        </LinearLayout>
+
+    </ScrollView>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal">
+        android:layout_marginStart="0dp"
+        android:layout_marginEnd="0dp"
+        android:background="@color/white"
+        android:layout_alignParentBottom="true"
+        app:labelVisibilityMode="labeled"
+        app:itemTextColor="@drawable/selector"
+        app:itemIconTint="@drawable/selector"
+        app:menu="@menu/menu_navigation" />
 
-        <TextView
-            android:id="@+id/profileFamilyName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=""
-            android:textAlignment="center"
-            android:textColor="@color/colorPrimary"
-            android:textSize="40sp"
-            android:layout_margin="30dp" />
-        <ImageView
-            android:id="@+id/profileFamilyNameEdit"
-            android:layout_width="65dp"
-            android:layout_height="50dp"
-            android:layout_toRightOf="@+id/profileFamilyName"
-            android:background="@drawable/secondary_button"
-            android:layout_marginTop="35dp"
-            android:src="@drawable/edit"
-            android:padding="8dp"/>
-
-    </RelativeLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="3dp"
-        android:background="@color/colorPrimary"
-        android:layout_margin="5dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Member Records"
-        android:textAlignment="center"
-        android:textColor="@color/colorPrimary"
-        android:textSize="30sp"
-        android:layout_margin="10dp" />
-
-    <LinearLayout
-        android:id="@+id/profileMembersView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:orientation="vertical"/>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="3dp"
-        android:background="@color/colorPrimary"
-        android:layout_margin="5dp" />
-
-    <Button
-        android:id="@+id/profileQuickStart"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="QuickStart Guide"
-        android:textSize="15sp"
-        android:textColor="#ffffff"
-        android:textStyle="bold"
-        android:padding="15dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/secondary_button"/>
-
-    <Button
-        android:id="@+id/profileLogout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Logout"
-        android:textSize="15sp"
-        android:textColor="#ffffff"
-        android:textStyle="bold"
-        android:padding="15dp"
-        android:layout_margin="20dp"
-        android:background="@drawable/danger_button"/>
-
-</LinearLayout>
-</ScrollView>
+</RelativeLayout>
