--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -24,14 +24,16 @@
                     android:textAlignment="center"
                     android:textColor="@color/colorPrimary"
                     android:textSize="40sp"
-                    android:layout_margin="30dp" />
+                    android:layout_marginTop="30dp"
+                    android:layout_marginBottom="30dp"
+                    android:layout_marginRight="5dp"/>
                 <ImageView
                     android:id="@+id/profileFamilyNameEdit"
-                    android:layout_width="65dp"
-                    android:layout_height="50dp"
+                    android:layout_width="50dp"
+                    android:layout_height="40dp"
                     android:layout_toRightOf="@+id/profileFamilyName"
                     android:background="@drawable/secondary_button"
-                    android:layout_marginTop="35dp"
+                    android:layout_marginTop="40dp"
                     android:src="@drawable/edit"
                     android:padding="8dp"/>
 
