--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#7f5a83</color>
+    <color name="colorPrimaryLight">#E5F0F5</color>
     <color name="colorPrimaryDark">#0d324d</color>
     <color name="colorAccent">#7f5a83</color>
 
