--- a/app/src/main/res/drawable/go_button.xml
+++ b/app/src/main/res/drawable/go_button.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="#98fcbd"
+        android:startColor="#8BE4AC"
         android:endColor="#9cdaf8"
         android:type="linear"/>
     <stroke
