--- a/app/src/main/res/drawable/round_image_view.xml
+++ b/app/src/main/res/drawable/round_image_view.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="#F3F1F1"
+        android:startColor="#FCFAFA"
         android:endColor="@color/colorPrimaryLight"
         android:type="linear"/>
     <stroke
