--- a/app/src/main/res/layout/list_view.xml
+++ b/app/src/main/res/layout/list_view.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/list_view"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white">
 
     <TextView
         android:id="@+id/heading"
@@ -19,13 +20,21 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/heading"/>
+    <ImageView
+        android:id="@+id/noTasksImage"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/empty_tasks"
+        android:layout_centerInParent="true"
+        android:visibility="invisible"/>
     <TextView
         android:id="@+id/noItemText"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:text=""
-        android:layout_marginTop="300dp"
-        android:layout_centerInParent="true"
+        android:layout_marginTop="20dp"
+        android:layout_below="@+id/noTasksImage"
         android:textSize="28sp"
         android:textColor="#8F949B"
         android:textAlignment="center"/>
