--- a/app/src/main/res/layout/points_tally.xml
+++ b/app/src/main/res/layout/points_tally.xml
@@ -16,9 +16,10 @@
             android:gravity="center">
 
             <TextView
+                android:id="@+id/headingBillboard"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Pagars' Billboard"
+                android:text=""
                 android:textSize="30sp"
                 android:textColor="@color/colorPrimary"
                 android:layout_margin="10dp"
