--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/white">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -32,7 +33,7 @@
                     android:layout_width="50dp"
                     android:layout_height="40dp"
                     android:layout_toRightOf="@+id/profileFamilyName"
-                    android:background="@drawable/secondary_button"
+                    android:background="@drawable/go_button"
                     android:layout_marginTop="40dp"
                     android:src="@drawable/edit"
                     android:padding="8dp"/>
@@ -48,7 +49,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Member Records"
+                android:text="All Time League Records"
                 android:textAlignment="center"
                 android:textColor="@color/colorPrimary"
                 android:textSize="30sp"
