--- a/app/src/main/res/layout/welcome_page.xml
+++ b/app/src/main/res/layout/welcome_page.xml
@@ -9,14 +9,14 @@
     android:gravity="center_horizontal"
     android:background="#ffffff">
 
+
     <ImageView
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_centerHorizontal="true"
         android:layout_margin="20dp"
         android:padding="10dp"
-        android:src="@drawable/my_mommy_icon"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        android:src="@drawable/my_mommy_icon" />
 
     <TextView
         android:id="@+id/welcomeText"
