--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#7f5a83</color>
-    <color name="colorPrimaryLight">#E5F0F5</color>
+    <color name="colorPrimary">#7082C4</color>
+    <color name="colorPrimaryLight">#F9F9FA</color>
     <color name="colorPrimaryDark">#0d324d</color>
-    <color name="colorAccent">#7f5a83</color>
+    <color name="colorAccent">#86A8E7</color>
 
-    <color name="themeButtonLight">#7f5a83</color>
-    <color name="themeButtonDark">#0d324d</color>
+    <color name="themeButtonLight">#819AF3</color>
+    <color name="themeButtonDark">#5C99C4</color>
 
     <color name="white">#ffffff</color>
 
